# Put your release notes or change log information
# in here.

BLD-R2-6-2: Shantha Condamoor: 18-Jul-2014
	Bug fix for Receiver ioc-sys0-bd02; Payload packets were not getting populated.
	
BLD-R2-6-1: Shantha Condamoor: 10-Jul-2014
	Photon Energy Calc: etax changed from 0.125 to 125 per PCD
	Added 10 more BLD data to waveform device support BLDApp/src/devBLDMCastWfRecv.c

BLD-R2-6-0: Shantha Condamoor: 9-Jul-2014 (PAMM)
	eBeam MCAST BLD version 6
	Replaced Receiver message queue with double buffer scheme recommended by T.straumann
	Swapped nsec/sec fields for both Receiver and Sends apps per PCD Request
	Added Shot-to-shot photon energy to eBeam data.	

BLD-R2-5-5: Shantha Condamoor: 25-Jun-2014 (POMM)
	Cleaned up BLDSender and BLDRcvr applications..
	Timestamp for Receiver device support from BLD packet header->tv_nsec and header->tv_sec fields.
	PCD swapped nsec/sec fields - accommodate this change.
	Cleaaned up time-counters.

BLD-R2-5-4: Shantha Condamoor: 18-Jun-2014 (POMM)
	Split BLD application into BLDSender and BLDReceiver.
	Timestamp for Receiver device support from BLD packet header->tv_nsec and header->tv_sec fields
	Added late_bld_pulse counter. Keeps track of time wrt to EVG time and network received time.

BLD-R2-5-3: Shantha Condamoor: 10-Jun-2014 (POMM)
	Added generic scripts in iocBoot 
	Added ioc-sys0-bd02
	Added one more multicasting IMB packet receiver support

BLD-R2-5-2: Shantha Condamoor: 28-May-2014 (PAMM)
	Added ai and sub records to get the pulseid and corresponding timestamp from PATT:SYS0:1:PULSEID for diagnostics.
	Set the latest received BLD packet header's timestamp to above timestamp for the matching pulseid.	

BLD-R2-5-1: Shantha Condamoor: 27-May-2014
	Added more diagnostics records
	Set the BLD header timestamp to when the BLD packet was received
	Reset the TSE fields to -1 for BSA.
	Priority of Imb and PhaseCavity Receiver threads set to epicsThreadPriorityHigh-1
	
BLD-R2-5-0: Shantha Condamoor: 28-Apr-2014